src/pygmentsrs/tests/snapshots/snapshot__html_text.snap
---
source: pygmentsrs/tests/snapshot.rs
expression: html
---
<div class="highlight"><pre><span></span>hello &amp; &lt;world&gt;
</pre></div>
