src/pygmentsrs/tests/snapshots/snapshot__python_def_function.snap
---
source: pygmentsrs/tests/snapshot.rs
expression: toks
---
[
    (
        "Token.Keyword",
        "def",
    ),
    (
        "Token.Text.Whitespace",
        " ",
    ),
    (
        "Token.Name.Function",
        "f",
    ),
    (
        "Token.Punctuation",
        "(",
    ),
    (
        "Token.Punctuation",
        ")",
    ),
    (
        "Token.Punctuation",
        ":",
    ),
    (
        "Token.Text.Whitespace",
        "\n",
    ),
    (
        "Token.Text",
        "    ",
    ),
    (
        "Token.Keyword",
        "return",
    ),
    (
        "Token.Text",
        " ",
    ),
    (
        "Token.Literal.Number.Integer",
        "1",
    ),
    (
        "Token.Text.Whitespace",
        "\n",
    ),
]
