src/pygmentsrs/tests/snapshots/snapshot__python_keywords_string.snap
---
source: pygmentsrs/tests/snapshot.rs
expression: toks
---
[
    (
        "Token.Keyword",
        "if",
    ),
    (
        "Token.Text",
        " ",
    ),
    (
        "Token.Keyword.Constant",
        "True",
    ),
    (
        "Token.Punctuation",
        ":",
    ),
    (
        "Token.Text.Whitespace",
        "\n",
    ),
    (
        "Token.Text",
        "    ",
    ),
    (
        "Token.Name",
        "x",
    ),
    (
        "Token.Text",
        " ",
    ),
    (
        "Token.Operator",
        "=",
    ),
    (
        "Token.Text",
        " ",
    ),
    (
        "Token.Literal.String.Double",
        "\"",
    ),
    (
        "Token.Literal.String.Double",
        "hi",
    ),
    (
        "Token.Literal.String.Double",
        "\"",
    ),
    (
        "Token.Text.Whitespace",
        "\n",
    ),
]
