src/pygmentsrs/tests/snapshots/snapshot__text_passthrough.snap
---
source: pygmentsrs/tests/snapshot.rs
expression: toks
---
[
    (
        "Token.Text",
        "hello\nworld\n",
    ),
]
